<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="power">^</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">–</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="cancel">C</string>
    <string name="change_sign">+/–</string>
    <string name="percent">%</string>
    <string name="factorial">!</string>
    <string name="square_root">√</string>
    <string name="pi">π</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
</resources>