<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout style="@style/rowForButtons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            style="@style/controlButton"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeSignButton"
            style="@style/controlButton"
            android:text="@string/change_sign" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/percentButton"
            style="@style/controlButton"
            android:text="@string/percent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/factorialButton"
            style="@style/controlButton"
            android:text="@string/factorial" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rootButton"
            style="@style/controlButton"
            android:text="@string/square_root" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/piButton"
            style="@style/controlButton"
            android:text="@string/pi" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/powerButton"
            style="@style/operatorButton"
            android:layout_weight="2"
            android:text="@string/power" />
    </LinearLayout>

    <LinearLayout style="@style/rowForButtons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number7Button"
            style="@style/numberButton"
            android:text="@string/seven" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number8Button"
            style="@style/numberButton"
            android:text="@string/eight" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number9Button"
            style="@style/numberButton"
            android:text="@string/nine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/divideButton"
            style="@style/operatorButton"
            android:text="@string/divide" />
    </LinearLayout>

    <LinearLayout style="@style/rowForButtons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number4Button"
            style="@style/numberButton"
            android:text="@string/four" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number5Button"
            style="@style/numberButton"
            android:text="@string/five" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number6Button"
            style="@style/numberButton"
            android:text="@string/six" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiplyButton"
            style="@style/operatorButton"
            android:text="@string/multiply" />
    </LinearLayout>

    <LinearLayout style="@style/rowForButtons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number1Button"
            style="@style/numberButton"
            android:text="@string/one" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number2Button"
            style="@style/numberButton"
            android:text="@string/two" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number3Button"
            style="@style/numberButton"
            android:text="@string/three" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusButton"
            style="@style/operatorButton"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout style="@style/rowForButtons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pointButton"
            style="@style/numberButton"
            android:text="@string/point" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number0Button"
            style="@style/numberButton"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equalsButton"
            style="@style/operatorButton"
            android:text="@string/equals" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusButton"
            style="@style/operatorButton"
            android:text="@string/plus" />
    </LinearLayout>
</LinearLayout>